--- a/assets/package.json
+++ b/assets/package.json
@@ -7,7 +7,11 @@
   },
   "dependencies": {
     "phoenix": "file:../deps/phoenix",
-    "phoenix_html": "file:../deps/phoenix_html"
+    "phoenix_html": "file:../deps/phoenix_html",
+    "vue": "^2.6.10",
+    "css-loader": "^2.1.1",
+    "fibers": "^4.0.2",
+    "file-loader": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
@@ -19,6 +23,10 @@
     "optimize-css-assets-webpack-plugin": "^4.0.0",
     "uglifyjs-webpack-plugin": "^1.2.4",
     "webpack": "4.4.0",
-    "webpack-cli": "^2.0.10"
+    "webpack-cli": "^2.0.10",
+    "sass": "^1.17.4",
+    "sass-loader": "^7.1.0",
+    "vue-loader": "^15.7.1",
+    "vue-template-compiler": "^2.6.10"
   }
 }
