--- a/assets/package.json
+++ b/assets/package.json
@@ -11,7 +11,9 @@
     "vue": "^2.6.10",
     "css-loader": "^2.1.1",
     "fibers": "^4.0.2",
-    "file-loader": "^4.2.0"
+    "file-loader": "^4.2.0",
+    "vuetify": "^1.5.5",
+    "url-loader": "^2.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
@@ -27,6 +29,8 @@
     "sass": "^1.17.4",
     "sass-loader": "^7.1.0",
     "vue-loader": "^15.7.1",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "vuetify-loader": "^1.0.5",
+    "@mdi/font": "^4.5.95"
   }
 }
