--- a/assets/package.json
+++ b/assets/package.json
@@ -13,7 +13,8 @@
     "fibers": "^4.0.2",
     "file-loader": "^4.2.0",
     "vuetify": "^1.5.5",
-    "url-loader": "^2.2.0"
+    "url-loader": "^2.2.0",
+    "vue-router": "^3.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
